Bug 461950 - Lokalize crash when trying to open a file via an item in de translation database
Summary: Lokalize crash when trying to open a file via an item in de translation database
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.3
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2022-11-17 13:05 UTC by Freek de Kruijf
Modified: 2023-07-08 09:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freek de Kruijf 2022-11-17 13:05:10 UTC
Application: lokalize (22.08.3)

Qt Version: 5.15.7
Frameworks Version: 5.100.0
Operating System: Linux 6.0.8-1-default x86_64
Windowing System: X11
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.26.3 [KCrashBackend]

-- Information about the crash:
First it reports that the file with that item, the word Flip, does not exists anymore. It shows the popup Delete and it craches on the click on that popup.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Lokalize (lokalize), signal: Segmentation fault

[KCrash Handler]
#4  std::__atomic_base<int>::load (__m=std::memory_order_relaxed, this=<optimized out>) at /usr/include/c++/12/bits/atomic_base.h:486
#5  QAtomicOps<int>::loadRelaxed<int> (_q_value=...) at /usr/include/qt5/QtCore/qatomic_cxx11.h:239
#6  QBasicAtomicInteger<int>::loadRelaxed (this=<optimized out>) at /usr/include/qt5/QtCore/qbasicatomic.h:107
#7  QtPrivate::RefCount::ref (this=<optimized out>) at /usr/include/qt5/QtCore/qrefcount.h:55
#8  QString::QString (other=..., this=0x7f3d3400d480) at /usr/include/qt5/QtCore/qstring.h:1094
#9  CatalogString::CatalogString (this=0x7f3d3400d480) at /usr/src/debug/lokalize-22.08.3/src/catalog/catalogstring.h:132
#10 TM::TMEntry::TMEntry (this=<optimized out>, this=<optimized out>) at /usr/src/debug/lokalize-22.08.3/src/tm/tmentry.h:23
#11 0x0000557af0f823a1 in TM::RemoveJob::RemoveJob (entry=..., this=0x7f3d3400d460) at /usr/src/debug/lokalize-22.08.3/src/tm/jobs.cpp:1647
#12 TM::TMView::removeEntry (this=this@entry=0x557af4dc7e20, e=...) at /usr/src/debug/lokalize-22.08.3/src/tm/tmview.cpp:559
#13 0x0000557af0f86e08 in TM::TMView::contextMenu (this=0x557af4dc7e20, pos=...) at /usr/src/debug/lokalize-22.08.3/src/tm/tmview.cpp:606
#14 0x00007f3d467132cd in QtPrivate::QSlotObjectBase::call (a=0x7fff25a1d1d0, r=0x557af4dc7e20, this=0x557af5395780) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#15 doActivate<false> (sender=0x557af530d510, signal_index=6, argv=0x7fff25a1d1d0) at kernel/qobject.cpp:3919
#16 0x00007f3d4670c74f in QMetaObject::activate (sender=sender@entry=0x557af530d510, m=m@entry=0x7f3d478ba320 <QWidget::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7fff25a1d1d0) at kernel/qobject.cpp:3979
#17 0x00007f3d473cc3a5 in QWidget::customContextMenuRequested (this=this@entry=0x557af530d510, _t1=...) at .moc/moc_qwidget.cpp:653
#18 0x00007f3d473e7a11 in QWidget::event (this=this@entry=0x557af530d510, event=event@entry=0x7fff25a1d600) at kernel/qwidget.cpp:8850
#19 0x00007f3d4749259e in QFrame::event (this=0x557af530d510, e=0x7fff25a1d600) at widgets/qframe.cpp:550
#20 0x00007f3d466dbeab in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x557af530d580, event=event@entry=0x7fff25a1d600) at kernel/qcoreapplication.cpp:1190
#21 0x00007f3d473a53ee in QApplicationPrivate::notify_helper (this=this@entry=0x557af1487910, receiver=receiver@entry=0x557af530d580, e=e@entry=0x7fff25a1d600) at kernel/qapplication.cpp:3631
#22 0x00007f3d473ac930 in QApplication::notify (this=<optimized out>, receiver=0x557af530d580, e=<optimized out>) at kernel/qapplication.cpp:3243
#23 0x00007f3d466dc128 in QCoreApplication::notifyInternal2 (receiver=0x557af530d580, event=0x7fff25a1d600) at kernel/qcoreapplication.cpp:1064
#24 0x00007f3d47400455 in QWidgetWindow::handleMouseEvent (this=<optimized out>, event=0x7fff25a1d8f0) at kernel/qwidgetwindow.cpp:691
#25 0x00007f3d47402fb0 in QWidgetWindow::event (this=0x557af3a4a8a0, event=0x7fff25a1d8f0) at kernel/qwidgetwindow.cpp:300
#26 0x00007f3d473a53fe in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x557af3a4a8a0, e=0x7fff25a1d8f0) at kernel/qapplication.cpp:3637
#27 0x00007f3d466dc128 in QCoreApplication::notifyInternal2 (receiver=0x557af3a4a8a0, event=0x7fff25a1d8f0) at kernel/qcoreapplication.cpp:1064
#28 0x00007f3d46b7b9ad in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#29 0x00007f3d46b4f37c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#30 0x00007f3d41f1a0fa in ?? () from /lib64/libQt5XcbQpa.so.5
#31 0x00007f3d44c6aa90 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#32 0x00007f3d44c6ae48 in ?? () from /lib64/libglib-2.0.so.0
#33 0x00007f3d44c6aedc in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#34 0x00007f3d46733b56 in QEventDispatcherGlib::processEvents (this=0x557af156cb70, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#35 0x00007f3d466dab9b in QEventLoop::exec (this=this@entry=0x7fff25a1dc20, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#36 0x00007f3d466e2d06 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#37 0x0000557af0ef4972 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/lokalize-22.08.3/src/main.cpp:126
[Inferior 1 (process 7547) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-02-07 16:47:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/30
Comment 2 Bug Janitor Service 2023-06-24 06:56:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/61
Comment 3 wojnilowicz 2023-07-08 09:32:15 UTC
Git commit 94a4e4dd51dd4e12daad1d8890a62bb4b0496998 by Łukasz Wojniłowicz.
Committed on 08/07/2023 at 09:30.
Pushed by wojnilowicz into branch 'master'.

Update entry reference after deleting nonexistent file in TM

M  +11   -9    src/tm/tmview.cpp

https://invent.kde.org/sdk/lokalize/-/commit/94a4e4dd51dd4e12daad1d8890a62bb4b0496998