Update entry reference after deleting nonexistent file in TM

BUG: 461950